--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             </li>
           </ul>
         </nav>
+
         <!-- Contact info -->
         <address class="contacts">
           <ul class="contacts-list">
@@ -410,6 +411,8 @@
         </div>
       </section>
     </main>
+
+    <!-- Footer section -->
     <footer class="footer">
       <div class="container footer-container">
         <div class="box-footer-logo">
@@ -454,7 +457,80 @@
             </li>
           </ul>
         </div>
+        <div class="footer-sbs">
+          <p class="sbs-caption">Subscribe</p>
+          <form class="sbs-form" name="subscribe">
+            <label class="sbs-form-field">
+              <input class="sbs-form-input" type="email" placeholder="E-mail" />
+            </label>
+            <button class="sbs-form-btn" type="submit">
+              Subscribe
+              <svg class="sbs-form-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-tgram"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
+
+    <!-- Modal window -->
+    <div class="backdrop is-open">
+      <div class="modal">
+        <button class="modal-btn" type="button" aria-label="Modal close button">
+          <svg class="modal-btn-icon" width="24" height="24">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+        <p class="modal-caption">
+          Leave your contacts and we will call you back
+        </p>
+        <form class="modal-form form" name="modal">
+          <label class="form-label" for="user_name">Name</label>
+          <div class="form-field">
+            <input
+              class="form-input"
+              type="text"
+              name="user_name"
+              id="user_name"
+            />
+            <svg class="form-icon" width="18" height="24">
+              <use href="./images/icons.svg#icon-user"></use>
+            </svg>
+          </div>
+          <label class="form-label" for="user_phone">Phone</label>
+          <div class="form-field">
+            <input
+              class="form-input"
+              type="tel"
+              name="user_phone"
+              id="user_phone"
+            />
+            <svg class="form-icon" width="18" height="24">
+              <use href="./images/icons.svg#icon-phone"></use>
+            </svg>
+          </div>
+          <label class="form-label" for="user_email">Email</label>
+          <div class="form-field">
+            <input
+              class="form-input"
+              type="email"
+              name="user_email"
+              id="user_email"
+            />
+            <svg class="form-icon" width="18" height="24">
+              <use href="./images/icons.svg#icon-email"></use>
+            </svg>
+          </div>
+          <label class="form-label" for="user_comment">Comment</label>
+          <textarea
+            class="form-message"
+            name="user-comment"
+            id="user-comment"
+            rows="5"
+          ></textarea>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
