--- a/index.html
+++ b/index.html
@@ -486,49 +486,75 @@
           Leave your contacts and we will call you back
         </p>
         <form class="modal-form form" name="modal">
-          <label class="form-label" for="user_name">Name</label>
-          <div class="form-field">
-            <input
-              class="form-input"
-              type="text"
-              name="user_name"
-              id="user_name"
-            />
-            <svg class="form-icon" width="18" height="24">
-              <use href="./images/icons.svg#icon-user"></use>
-            </svg>
+          <div class="form-wrapper">
+            <label class="form-label" for="user_name">Name</label>
+            <div class="form-field">
+              <input
+                class="form-input"
+                type="text"
+                name="user_name"
+                id="user_name"
+              />
+              <svg class="form-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-user"></use>
+              </svg>
+            </div>
           </div>
-          <label class="form-label" for="user_phone">Phone</label>
-          <div class="form-field">
-            <input
-              class="form-input"
-              type="tel"
-              name="user_phone"
-              id="user_phone"
-            />
-            <svg class="form-icon" width="18" height="24">
-              <use href="./images/icons.svg#icon-phone"></use>
-            </svg>
+          <div class="form-wrapper">
+            <label class="form-label" for="user_phone">Phone</label>
+            <div class="form-field">
+              <input
+                class="form-input"
+                type="tel"
+                name="user_phone"
+                id="user_phone"
+              />
+              <svg class="form-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
           </div>
-          <label class="form-label" for="user_email">Email</label>
-          <div class="form-field">
-            <input
-              class="form-input"
-              type="email"
-              name="user_email"
-              id="user_email"
-            />
-            <svg class="form-icon" width="18" height="24">
-              <use href="./images/icons.svg#icon-email"></use>
-            </svg>
+          <div class="form-wrapper">
+            <label class="form-label" for="user_email">Email</label>
+            <div class="form-field">
+              <input
+                class="form-input"
+                type="email"
+                name="user_email"
+                id="user_email"
+              />
+              <svg class="form-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
+            </div>
           </div>
-          <label class="form-label" for="user_comment">Comment</label>
-          <textarea
-            class="form-message"
-            name="user-comment"
-            id="user-comment"
-            rows="5"
-          ></textarea>
+          <div class="form-wrapper">
+            <label class="form-label" for="user-message">Comment</label
+            ><textarea
+              class="form-message"
+              name="user-message"
+              id="user-message"
+              rows="7"
+              placeholder="Text input"
+            ></textarea>
+          </div>
+          <label class="form-agreement">
+            <input
+              class="checkbox visually-hidden"
+              type="checkbox"
+              name="user-agreement"
+              value="false"
+              checked
+            />
+            <span class="form-agreement-checkbox">
+              <svg class="form-agreement-icon" width="10" height="8">
+                <use href="./images/icons.svg#icon-vector"></use>
+              </svg>
+            </span>
+            I accept the terms and conditions of the
+            <a class="form-agreement-link">Privacy Policy</a>
+          </label>
+          <button class="form-button" type="submit">Send</button>
         </form>
       </div>
     </div>
