--- a/index.html
+++ b/index.html
@@ -461,7 +461,12 @@
           <p class="sbs-caption">Subscribe</p>
           <form class="sbs-form" name="subscribe">
             <label class="sbs-form-field">
-              <input class="sbs-form-input" type="email" placeholder="E-mail" />
+              <input
+                class="sbs-form-input"
+                type="email"
+                name="user-subscribe"
+                placeholder="E-mail"
+              />
             </label>
             <button class="sbs-form-btn" type="submit">
               Subscribe
@@ -487,13 +492,13 @@
         </p>
         <form class="modal-form form" name="modal">
           <div class="form-wrapper">
-            <label class="form-label" for="user_name">Name</label>
+            <label class="form-label" for="user-name">Name</label>
             <div class="form-field">
               <input
                 class="form-input"
                 type="text"
-                name="user_name"
-                id="user_name"
+                name="user-name"
+                id="user-name"
               />
               <svg class="form-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-user"></use>
@@ -501,13 +506,13 @@
             </div>
           </div>
           <div class="form-wrapper">
-            <label class="form-label" for="user_phone">Phone</label>
+            <label class="form-label" for="user-phone">Phone</label>
             <div class="form-field">
               <input
                 class="form-input"
                 type="tel"
-                name="user_phone"
-                id="user_phone"
+                name="user-phone"
+                id="user-phone"
               />
               <svg class="form-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-phone"></use>
@@ -515,13 +520,13 @@
             </div>
           </div>
           <div class="form-wrapper">
-            <label class="form-label" for="user_email">Email</label>
+            <label class="form-label" for="user-email">Email</label>
             <div class="form-field">
               <input
                 class="form-input"
                 type="email"
-                name="user_email"
-                id="user_email"
+                name="user-email"
+                id="user-email"
               />
               <svg class="form-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-email"></use>
@@ -529,11 +534,11 @@
             </div>
           </div>
           <div class="form-wrapper">
-            <label class="form-label" for="user-message">Comment</label
+            <label class="form-label" for="user-comment">Comment</label
             ><textarea
               class="form-message"
-              name="user-message"
-              id="user-message"
+              name="user-comment"
+              id="user-comment"
               rows="7"
               placeholder="Text input"
             ></textarea>
@@ -544,7 +549,6 @@
               type="checkbox"
               name="user-agreement"
               value="false"
-              checked
             />
             <span class="form-agreement-checkbox">
               <svg class="form-agreement-icon" width="10" height="8">
