--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
           Leave your contacts and we will call you back
         </p>
         <form class="modal-form form" name="modal">
-          <div class="form-wrapper">
+          <div class="form-wrapper-modal">
             <label class="form-label" for="user-name">Name</label>
             <div class="form-field">
               <input
