--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
               </svg>
             </div>
           </div>
-          <div class="form-wrapper">
+          <div class="form-wrapper-modal">
             <label class="form-label" for="user-phone">Phone</label>
             <div class="form-field">
               <input
@@ -519,7 +519,7 @@
               </svg>
             </div>
           </div>
-          <div class="form-wrapper">
+          <div class="form-wrapper-modal">
             <label class="form-label" for="user-email">Email</label>
             <div class="form-field">
               <input
