--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
           Leave your contacts and we will call you back
         </p>
         <form class="modal-form form" name="modal">
-          <div class="form-wrapper-modal">
+          <div class="form-wrapper">
             <label class="form-label" for="user-name">Name</label>
             <div class="form-field">
               <input
@@ -505,7 +505,7 @@
               </svg>
             </div>
           </div>
-          <div class="form-wrapper-modal">
+          <div class="form-wrapper">
             <label class="form-label" for="user-phone">Phone</label>
             <div class="form-field">
               <input
@@ -519,7 +519,7 @@
               </svg>
             </div>
           </div>
-          <div class="form-wrapper-modal">
+          <div class="form-wrapper">
             <label class="form-label" for="user-email">Email</label>
             <div class="form-field">
               <input
